--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-mail'
     implementation 'org.springframework.boot:spring-boot-starter-aop'
     implementation 'org.glassfish.jaxb:jaxb-runtime'
+    implementation 'org.springframework:spring-oxm'
 }
 
 tasks.named('test') {
